syntax = "proto3";
package tendermint.proto.blockchain;

option go_package = "github.com/tendermint/tendermint/proto/blockchain";

import "third_party/proto/gogoproto/gogo.proto";
import "proto/types/block.proto";

message BlockRequest {
  int64 height = 1;
}

message NoBlockResponse {
  int64 height = 1;
}

message BlockResponse {
  tendermint.proto.types.Block block = 1 [(gogoproto.nullable) = false];
}

message StatusRequest {
  int64 Height = 1;
  int64 base   = 2;
}

message StatusResponse {
  int64 height = 1;
  int64 base   = 2;
}

message Message {
  oneof sum {
    BlockRequest    block_request     = 1;
    NoBlockResponse no_block_response = 2;
    BlockResponse   block_response    = 3;
    StatusRequest   status_request    = 4;
    StatusResponse  status_response   = 5;
  }
}
